# yew-component-library

./: .gitignore  Cargo.toml  Trunk.toml  index.html  yew-component-library-378b5341a30ac90cd9d8d2fe773eb090aaa3c19226b28ab23c638df3cc92449cdf6ff6ee6998873de35f697a44d22a9a.js  yew-component-library-378b5341a30ac90cd9d8d2fe773eb090aaa3c19226b28ab23c638df3cc92449cdf6ff6ee6998873de35f697a44d22a9a_bg.wasm  yew-component-library-7017e39f1f07e1cb.js  yew-component-library-7017e39f1f07e1cb_bg.wasm  yew-component-library-8b2705ef0be08b79.js  yew-component-library-8b2705ef0be08b79_bg.wasm  yew-component-library-9d70216d10f56a0083c6e2153a94721c1d9bca7aac00e5315addc351b8b016e5d8810772afeb90f681c940f01ff706ae.js  yew-component-library-9d70216d10f56a0083c6e2153a94721c1d9bca7aac00e5315addc351b8b016e5d8810772afeb90f681c940f01ff706ae_bg.wasm  yew-component-library-a4fa5442ea568e0a.js  yew-component-library-a4fa5442ea568e0a_bg.wasm
.github/workflows/: continuous_deployment.yml
src/: main.rs
src/components/: main_menu.rs  mod.rs
src/routers/: main_router.rs
src/routes/: mod.rs
src/templates/: root.html
src/views/: datepicker_view.rs  main_view.rs  mod.rs
