[package]
name = "yew-component-library"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18.0"
gloo = "0.11.0"
web-sys = {version = "0.3.64", features = ["Element", "DomTokenList", "HtmlElement"]}
once_cell = "1.18.0"
yew-datepicker = "0.2.4"
pure-rust-locales = "0.7.0"
chrono = "0.4.31"
yew-template = "0.10.0"